# COPT-MT

./: README.md  mvc_solver.py  pyproject.toml  solver.py  solver_reduction.py
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml
configs/data/: ba_large.yaml  ba_small.yaml  ba_small_mds_from_maxclique.yaml  ba_small_mds_from_maxcut.yaml  ba_small_mds_from_mis.yaml  frb30-15.yaml  frontierco_mds.yaml  frontierco_mis.yaml  gnn_benchmark.yaml  malnet.yaml  rb_large.yaml  rb_small.yaml  snap_dataset.yaml  tu_dataset.yaml
configs/experiment/: gcn_graph_classification.yaml  gcn_node_classification.yaml  multitask.yaml
configs/experiment/csl/: gcn_csl.yaml  gcn_csl_base.yaml  gcn_csl_espe.yaml  gcn_csl_hkse.yaml  gcn_csl_lappe.yaml  gcn_csl_lcp.yaml  gcn_csl_rwse.yaml
configs/experiment/malnet/: gcn_malnet.yaml  gcn_malnet_base.yaml  (+5 more)
configs/hparams_search/: mvc_optuna.yaml
configs/logger/: wandb.yaml
configs/model/: base.yaml  gat.yaml  gatv2.yaml  gcn.yaml  gcon.yaml  gcon_complement.yaml  gin.yaml  gnn_with_gps.yaml  gps_custom.yaml  gps_gcon.yaml
configs/paths/: default.yaml
configs/task/: cliquecover.yaml  color.yaml  maxclique.yaml  maxcut.yaml  mds.yaml  mis.yaml  multitask.yaml  mvc.yaml
run/: wrapper_cc.sb  wrapper_mila.sb  wrapper_mila_large.sb
src/: eval.py  test.py  train.py
src/data/: data_generation.py  frb_datamodule.py  synthetic_datamodule.py
src/models/: copt_module.py
src/transforms/: copt.py  graph_stats.py  transforms.py
src/utils/: __init__.py  logging_utils.py  metrics.py  reductions.py  utils_graphgym.py
(+114 files in other folders)
