[project]
name = "copt-mt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gurobipy>=12.0.1",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "jupyter>=1.1.1",
    "lightning>=2.5.2",
    "networkx>=3.4.2",
    "notebook>=7.3.2",
    "numba>=0.61.0",
    "pot>=0.9.5",
    "rich>=14.0.0",
    "rootutils>=1.0.7",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "wandb>=0.19.10",
]
[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

